tests/errors/tcl_error_beta/tcl_error_sourced_2.tcl
proc d args {
    error "Error!"
    

}

d


